# Energy-Market-Knowledge-Assistant

./: .gitignore  document_loader.py  main.py  pyproject.toml  rag_pipeline.py  vector_store.py
chroma_db/40abad24-7236-4c5f-8a03-c7913e70b41f/: index_metadata.pickle
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
